<resources>
    <string name="app_name">Dressify</string>
    <string name="txt_btnLogin">Login</string>
    <string name="txt_btnRegister">Register</string>
    <string name="tv_landingRegister">Register</string>
    <string name="loginTextContinueWith">Login with Google</string>
    <string name="txt_hintLogin">Password</string>
    <string name="txt_hintConfirmPassword">Confirm Password</string>
    <string name="txt_hintEmail">Email</string>
    <string name="tvLoginTitle">Login</string>
    <string name="tvRegisterTitle">Register</string>
    <string name="txt_hintUsername">Username</string>
    <string name="tv_termsAgreement">I agree to the Privacy policy and Terms of use.</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>

    <string name="tv_landingTitle_first">Welcome To Dressify</string>
    <string name="tv_landingTitle_second">AR Meets Fashion</string>
    <string name="tv_landingTitle_third">Save Your Favorite Items</string>

    <string name="tv_landingDesc_first">The Practical Solution for All Your Fashion Needs</string>
    <string name="tv_landingDesc_second">Delve Into The World Of Fashion And Technologies</string>
    <string name="tv_landingDesc_third">Never lost your item again with favorites!</string>

<!--    Landing -->
    <string name="tv_landingTitle_first">Welcome To Dressify</string>
    <string name="tv_landingTitle_second">AR Meets Fashion</string>
    <string name="tv_landingTitle_third">Save Your Favorite Items</string>

    <string name="tv_landingDesc_first">The Practical Solution for All Your Fashion Needs</string>
    <string name="tv_landingDesc_second">Delve Into The World Of Fashion And Technologies</string>
    <string name="tv_landingDesc_third">Never lost your item again with favorites!</string>




    <string name="tvTitleRecomendation">Discover Your Best Style With Us</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="type_of_clothes">Type of Clothes</string>
    <string name="shirts">Shirts</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="base_color">Base Color</string>
    <string name="black">Black</string>
    <string name="brown">Brown</string>
    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="season">Season</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="spring">Spring</string>
    <string name="usage">Usage</string>
    <string name="casual">Casual</string>
    <string name="ethnic">Ethnic</string>
    <string name="sports">Sports</string>
    <string name="formal">Formal</string>
    <string name="btnSubmitRecomendation">Submit</string>


    <string name="nav_home">Home</string>
    <string name="nav_fave">Favorite</string>
    <string name="nav_profile">Profile</string>
    <string name="catalog_toolbar_title">Dressify</string>
    <string name="tv_catalogTitle">Based on your preference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_noitem">No Item added</string>
    <string name="tv_profileTitle">Profile</string>
    <string name="tv_profileUsernameHeader">Username</string>
    <string name="tv_profileUsername">Username</string>
    <string name="tv_profileEmailHeader">Email</string>
    <string name="tv_profileEmail">Email</string>
    <string name="tv_btnLogout">Logout</string>
    <string name="tv_clotheName">Clothe Name</string>
    <string name="tv_logintextAccount">Don\'t have an account?</string>
    <string name="tv_logintoregister">Register</string>
    <string name="errorPassword">Your password must be at least 6 characters long</string>
    <string name="landing_btn_string">Get Started</string>
    <string name="unisex">Unisex</string>
    <string name="rainy">Rainy</string>
    <string name="ready_to_see_a_magic">Ready to see a magic?</string>
    <string name="click_me">Click me</string>
>>>>>>> dev-giras
</resources>