<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".ui.recommendation.RecommendationActivity">

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintBottom_toTopOf="@id/btnSubmit"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      tools:layout_editor_absoluteX="165dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/tvRecomendationTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/chivo_black"
          android:gravity="center"
          android:text="@string/tvTitleRecomendation"
          android:textColor="@color/btn_primary"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.06" />

      <RadioGroup
          android:id="@+id/radioGroupGender"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20dp"
          android:orientation="horizontal"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvRecomendationTitle">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/female" />
      </RadioGroup>

      <LinearLayout
          android:id="@+id/checkboxLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="@+id/radioGroupGender"
          app:layout_constraintTop_toBottomOf="@+id/radioGroupGender">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/type_of_clothes"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

          <CheckBox
              android:id="@+id/checkboxShirts"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/shirts"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/checkboxTShirts"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="140dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/t_shirts"
              app:layout_constraintStart_toEndOf="@+id/checkboxShirts"
              app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/checkBoxBaseColor"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="@id/checkboxLayout"
          app:layout_constraintTop_toBottomOf="@id/checkboxLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/base_color"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

          <CheckBox
              android:id="@+id/black"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/black"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/brown"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="144dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/brown"
              app:layout_constraintStart_toEndOf="@id/black"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/white"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/white"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/black" />

          <CheckBox
              android:id="@+id/gray"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="142dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/gray"
              app:layout_constraintStart_toEndOf="@id/white"
              app:layout_constraintTop_toBottomOf="@+id/brown" />

          <CheckBox
              android:id="@+id/blue"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/blue"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/white" />

          <CheckBox
              android:id="@+id/red"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="142dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/red"
              app:layout_constraintStart_toEndOf="@id/white"
              app:layout_constraintTop_toBottomOf="@+id/gray" />


        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/checkBoxSeason"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="@id/checkBoxBaseColor"
          app:layout_constraintTop_toBottomOf="@id/checkBoxBaseColor">

        <TextView
            android:id="@+id/tvSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/season"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

          <CheckBox
              android:id="@+id/fall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/fall"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/winter"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="153dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/winter"
              app:layout_constraintStart_toEndOf="@+id/fall"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/summer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/summer"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/fall" />

          <CheckBox
              android:id="@+id/spring"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="120dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/spring"
              app:layout_constraintStart_toEndOf="@id/summer"
              app:layout_constraintTop_toBottomOf="@id/winter" />

        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/checkboxUsage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="@id/checkBoxSeason"
          app:layout_constraintTop_toBottomOf="@id/checkBoxSeason">

        <TextView
            android:id="@+id/tvUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/usage"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

          <CheckBox
              android:id="@+id/casual"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/casual"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/ethnic"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="130dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/ethnic"
              app:layout_constraintStart_toEndOf="@id/casual"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/sports"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/sports"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/casual" />

          <CheckBox
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="130dp"
              android:fontFamily="@font/chivo_regular"
              android:text="@string/formal"
              app:layout_constraintStart_toEndOf="@id/sports"
              app:layout_constraintTop_toBottomOf="@id/ethnic" />


        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>

  <Button
      android:id="@+id/btnSubmit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btnSubmitRecomendation"
      android:fontFamily="@font/chivo_black"
      android:backgroundTint="@color/btn_primary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>