<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.register.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/jost_regular"
        android:text="@string/tvRegisterTitle"
        android:textColor="@color/btn_primary"
        android:textSize="28sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_register"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_registerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registerTitle"
        app:layout_constraintVertical_bias="0.02">


        <com.capstone.dressify.ui.customview.ValidationEmail
            android:id="@+id/edt_registerEmail"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hintEmail"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:fontFamily="@font/monserrat_regular"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="280dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_registerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.7"
        app:layout_constraintBottom_toTopOf="@+id/til_registerPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_registerEmail">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_registerUsername"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hintUsername"
            android:inputType="text"
            android:textStyle="bold"
            android:fontFamily="@font/monserrat_regular"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="280dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.7"
        app:layout_constraintBottom_toTopOf="@+id/til_registerConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_registerUsername"
        app:passwordToggleEnabled="true">


        <com.capstone.dressify.ui.customview.ValidationPassword
            android:id="@+id/edt_registerPassword"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hintLogin"
            android:inputType="textPassword"
            android:alpha="0.7"
            android:textStyle="bold"
            android:fontFamily="@font/monserrat_regular"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="280dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_registerConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_registerPassword"
        app:passwordToggleEnabled="true">


        <com.capstone.dressify.ui.customview.ValidationConfirmPassword
            android:id="@+id/edt_registerConfirmPassword"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hintConfirmPassword"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:fontFamily="@font/monserrat_regular"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="280dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_registerConfirmPassword"
        app:layout_constraintVertical_bias="0.0">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_termsAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/monserrat_regular"
            android:text="@string/tv_termsAgreement"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/btn_primary"
        android:text="@string/txt_btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>